2008-12-15  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (select_current_output_from_dialog_position):
	New function.
	(dialog_map_event_cb): New GtkWidget::map-event handler for the
	toplevel dialog.  When the dialog gets mapped, we make the current
	output be the one which actually contains the dialog window, so
	that the user can edit the monitor which he's looking at.

2008-12-15  Federico Mena Quintero  <federico@novell.com>

	* display-capplet.glade: Put the "Monitor" label inside an event
	box, so we can change the background color of the event box.  Give
	names to both widgets: current_monitor_label,
	current_monitor_event_box.

	* xrandr-capplet.c (rebuild_gui): When a monitor is selected,
	update the "Monitor" label to include the monitor's name and color
	so the user will know which monitor he is editing.
	(rebuild_current_monitor_label): New function.
	(struct App): New fields current_monitor_label,
	current_monitor_event_box.

2008-12-12  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=381030 - Prettify the
	Display capplet's dialog

	* display-capplet.glade: Use the HIG's recommended colons,
	capitalization, and spacing.  Use headers to separate the Monitor
	options from the Panel icon option.  Add instructions on how to
	operate the draggable monitors.

2008-12-12  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (on_clone_changed): If we turn off "mirror
	screens", and if the monitors are still overlapping, lay out the
	monitors from left to right so that the user will know that all
	the monitors are present.  Previously you had to know that you had
	to un-overlap them by hand.
	(lay_out_outputs_horizontally): New function.

2008-12-03  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (rebuild_rotation_combo): Pass a NULL error
	argument to gnome_rr_config_applicable; we should really show why
	that rotation is not available.